tests/suite/analyze/snapshots/suite__analyze__live_variables__cmp_cant_save_you_all_from_death-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 272
expression: live_ranges
---
rsp          enter:
|              mov _useless, 0
|              mov _x, 1
|   _x         add _useless, 5
|   |          mov _y, 2
|   ●   _y     cmp _x, _y
|              add _x, 1
|              and _useless, 1
|              je exit
|            fallthrough:
|              or _useless, 1
|              add _y, 1
|            exit:
●              ret

