tests/suite/analyze/snapshots/suite__analyze__live_variables__everything_is_meaningless-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 169
expression: live_ranges
---
rsp  enter:
┊      mov _x, 1
┊      mov _y, 2
┊      add _y, _x
┊      mov _z, 5
┊      sub _x, _y
┊      mov rax, [_x + _z]
┊      imul 2
┊      neg rax
┊      nop
┊      mov _z, rdx
┊      jmp exit
┊    exit:
A      ret

