tests/suite/analyze/snapshots/suite__analyze__live_variables__everything_is_meaningless.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 169
expression: live_variables
---

 everything_is_meaningless

   +--------------------+
   |       enter:       |
   | {rsp}              |
   | mov _x, 1          |
   | {rsp}              |
   | mov _y, 2          |
   | {rsp}              |
   | add _y, _x         |
   | {rsp}              |
   | mov _z, 5          |
   | {rsp}              |
   | sub _x, _y         |
   | {rsp}              |
   | mov rax, [_x + _z] |
   | {rsp}              |
   | imul 2             |
   | {rsp}              |
   | neg rax            |
   | {rsp}              |
   | nop                |
   | {rsp}              |
   | mov _z, rdx        |
   | {rsp}              |
   | jmp exit           |
   | {rsp}              |
   +--------------------+
     |
     |
     v
   +--------------------+
   |       exit:        |
   | {rsp}              |
   | ret                |
   | {}                 |
   +--------------------+

