tests/suite/analyze/snapshots/suite__analyze__live_variables__everything_is_meaningless_except_call-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 198
expression: live_ranges
---
rsp          enter:
┊              mov _x, 1
┊   _x         mov _y, 2
┊   |   _y     add _x, _y
┊   |   |      add _y, _x
┊   ●   |      mov rdi, _x
┊   rdi ●      mov rsi, _y
┊   ●   rsi    call black_box
┊              add _x, _y
┊              add _y, _x
┊            exit:
C              ret

