tests/suite/analyze/snapshots/suite__analyze__live_variables__everything_is_meaningless_except_call.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 198
expression: live_variables
---

 everything_is_meaningless_except_call

          +-----------------+
          |     enter:      |
          | {rsp}           |
          | mov _x, 1       |
          | {rsp, _x}       |
          | mov _y, 2       |
          | {rsp, _x, _y}   |
          | add _x, _y      |
          | {rsp, _x, _y}   |
          | add _y, _x      |
          | {rsp, _x, _y}   |
          | mov rdi, _x     |
          | {rsp, rdi, _y}  |
          | mov rsi, _y     |
          | {rsp, rsi, rdi} |
          | call black_box  |
          | {rsp}           |
          | add _x, _y      |
          | {rsp}           |
          | add _y, _x      |
          | {rsp}           |
          | jmp exit        |
          | {rsp}           |
          +-----------------+
            |
            |
            v
          +-----------------+
          |      exit:      |
          | {rsp}           |
          | ret             |
          | {}              |
          +-----------------+

